[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ikumar"
version = "0.0.1"
authors = [
    { name = "ikumar", email = "indrajeet.kumat.iitbhu14@gmail.com" },
            ]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/abchotujnn1/packaging_tutorial"
Issues = "https://github.com/abchotujnn1/packaging_tutorial/issues"

